--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/blog",
+            "outputPath": "dist/blog/browser",
             "index": "projects/blog/src/index.html",
             "main": "projects/blog/src/main.ts",
             "polyfills": "projects/blog/src/polyfills.ts",
@@ -31,6 +31,7 @@
               "projects/blog/src/assets"
             ],
             "styles": [
+              "projects/blog/src/custom-theme.scss",
               "projects/blog/src/styles.less"
             ],
             "scripts": []
@@ -103,6 +104,49 @@
             ],
             "scripts": []
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/blog/server",
+            "main": "projects/blog/src/main.server.ts",
+            "tsConfig": "projects/blog/tsconfig.server.json",
+            "inlineStyleLanguage": "less"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "projects/blog/src/environments/environment.ts",
+                  "with": "projects/blog/src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "app-shell": {
+          "builder": "@angular-devkit/build-angular:app-shell",
+          "options": {
+            "route": "shell"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "blog:build:production",
+              "serverTarget": "blog:server:production"
+            },
+            "development": {
+              "browserTarget": "blog:build:development",
+              "serverTarget": "blog:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
