Revert "init pwa"
This reverts commit 2e7d9fda641dbccd248adb3ef3c218a96cce6fcb.

--- a/angular.json
+++ b/angular.json
@@ -28,16 +28,13 @@
             "inlineStyleLanguage": "less",
             "assets": [
               "projects/blog/src/favicon.ico",
-              "projects/blog/src/assets",
-              "projects/blog/src/manifest.webmanifest"
+              "projects/blog/src/assets"
             ],
             "styles": [
               "projects/blog/src/custom-theme.scss",
               "projects/blog/src/styles.less"
             ],
-            "scripts": [],
-            "serviceWorker": true,
-            "ngswConfigPath": "projects/blog/ngsw-config.json"
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -100,8 +97,7 @@
             "inlineStyleLanguage": "less",
             "assets": [
               "projects/blog/src/favicon.ico",
-              "projects/blog/src/assets",
-              "projects/blog/src/manifest.webmanifest"
+              "projects/blog/src/assets"
             ],
             "styles": [
               "projects/blog/src/styles.less"
