--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "dev:ssr": "ng run blog:serve-ssr",
+    "serve:ssr": "node dist/blog/server/main.js",
+    "build:ssr": "ng build && ng run blog:server",
+    "prerender": "ng run blog:prerender"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +24,10 @@
     "@angular/material": "~13.3.4",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/platform-server": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@nguniversal/express-engine": "^13.1.0",
+    "express": "^4.15.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -34,6 +41,8 @@
     "@angular-eslint/template-parser": "13.2.1",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
+    "@nguniversal/builders": "^13.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.17.0",
