--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "web",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
+    "generate": "ts-node ./projects/blog/generation/main.ts",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -17,17 +19,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
-    "@angular/cdk": "~13.3.6",
+    "@angular/cdk": "~13.3.4",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.6",
+    "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
-    "@angular/material": "~13.3.6",
+    "@angular/material": "~13.3.4",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/platform-server": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@nguniversal/express-engine": "^13.1.1",
+    "@nguniversal/express-engine": "^13.1.0",
     "express": "^4.15.2",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.3",
@@ -48,7 +50,7 @@
     "@angular-eslint/eslint-plugin-template": "13.2.1",
     "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "~13.3.5",
+    "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
     "@nguniversal/builders": "^13.1.0",
     "@types/express": "^4.17.0",
@@ -64,6 +66,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ts-node": "^10.7.0",
     "typescript": "~4.6.2"
   }
 }
