--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "~14.0.1",
     "@nguniversal/express-engine": "^14.0.0",
     "express": "^4.18.1",
+    "immutable": "^4.1.0",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-frontmatter": "^4.0.1",
